--- a/StewardClient/src/app/pages/navbar-app/pages/gifting/apollo/apollo-gifting.component.html
+++ b/StewardClient/src/app/pages/navbar-app/pages/gifting/apollo/apollo-gifting.component.html
@@ -1,17 +1,30 @@
 <div class="left-side">
-  <apollo-player-selection
-    [allowT10Id]="false"
-    [allowGroup]="false"
-    [(ngModel)]="selectedPlayerIdentities"
-    (ngModelChange)="onPlayerIdentitiesChange($event)"
-    (playerIdentitySelectedEvent)="playerIdentitySelected($event)"
-  ></apollo-player-selection>
-  <apollo-lsp-group-selection></apollo-lsp-group-selection>
+  <mat-tab-group
+    [(selectedIndex)]="matTabSelectedIndex"
+    (selectedTabChange)="matTabSelectionChange($event.index)"
+  >
+    <mat-tab label="Player Selection">
+      <apollo-player-selection
+        [allowT10Id]="false"
+        [allowGroup]="false"
+        [(ngModel)]="selectedPlayerIdentities"
+        (ngModelChange)="onPlayerIdentitiesChange($event)"
+        (playerIdentitySelectedEvent)="playerIdentitySelected($event)"
+      ></apollo-player-selection>
+    </mat-tab>
+    <mat-tab *ngIf="!disableLspGroupSelection" label="LSP Group Selection">
+      <apollo-lsp-group-selection
+        [(ngModel)]="selectedLspGroup"
+        (ngModelChange)="onLspGroupChange($event)"
+      ></apollo-lsp-group-selection>
+    </mat-tab>
+  </mat-tab-group>
 </div>
 
 <div class="action-container">
   <mat-card>
     <h2>Apollo gifting page state</h2>
     <p>Number of identities: {{ selectedPlayerIdentities?.length }}</p>
+    <p>LSP Group: {{ selectedLspGroup?.name || 'None' }}</p>
   </mat-card>
 </div>
