setup abstract class for gifting page along with tooling page template with mat tabs

--- a/StewardClient/src/app/pages/navbar-app/components/player-selection/player-selection.component.html
+++ b/StewardClient/src/app/pages/navbar-app/components/player-selection/player-selection.component.html
@@ -1,6 +1,6 @@
 <mat-card>
   <h2>
-    Player Selection
+    Select {{title}} players
     <span *ngIf="playerIdentities?.length > 0">({{ playerIdentities.length }})</span>
   </h2>
 
