--- a/StewardClient/src/app/pages/navbar-app/pages/gifting/sunrise/sunrise-gifting.component.html
+++ b/StewardClient/src/app/pages/navbar-app/pages/gifting/sunrise/sunrise-gifting.component.html
@@ -1,31 +1,30 @@
-<div class="left-side">
-  <mat-tab-group
-    [(selectedIndex)]="matTabSelectedIndex"
-    (selectedTabChange)="matTabSelectionChange($event.index)"
-  >
-    <mat-tab label="Player Selection">
-      <sunrise-player-selection
-        [allowGroup]="true"
-        [allowT10Id]="false"
-        [allowGroup]="true"
-        [(ngModel)]="selectedPlayerIdentities"
-        (ngModelChange)="onPlayerIdentitiesChange($event)"
-        (playerIdentitySelectedEvent)="playerIdentitySelected($event)"
-      ></sunrise-player-selection>
-    </mat-tab>
-    <mat-tab *ngIf="!disableLspGroupSelection" label="LSP Group Selection">
-      <sunrise-lsp-group-selection
-        [(ngModel)]="selectedLspGroup"
-        (ngModelChange)="onLspGroupChange($event)"
-      ></sunrise-lsp-group-selection>
-    </mat-tab>
-  </mat-tab-group>
-</div>
+<tooling-page-layout
+  [disableLspGroupSelection]="disableLspGroupSelection"
+  [matTabSelectedIndex]="matTabSelectedIndex"
+  (matTabSelectionChangeEvent)="matTabSelectionChange($event)"
+>
+  <!-- Player selection -->
+  <sunrise-player-selection
+    player-selection
+    [allowGroup]="true"
+    [allowT10Id]="false"
+    [allowGroup]="true"
+    [(ngModel)]="selectedPlayerIdentities"
+    (ngModelChange)="onPlayerIdentitiesChange($event)"
+    (playerIdentitySelectedEvent)="playerIdentitySelected($event)"
+    ></sunrise-player-selection>
 
-<div class="action-container">
-  <mat-card>
+  <!-- LSP Group Selection -->
+  <sunrise-lsp-group-selection
+    lsp-group-selection
+    [(ngModel)]="selectedLspGroup"
+    (ngModelChange)="onLspGroupChange($event)"
+  ></sunrise-lsp-group-selection>
+
+  <!-- Page tool -->
+  <mat-card tool-container>
     <h2>Sunrise gifting page state</h2>
     <p>Number of identities: {{ selectedPlayerIdentities?.length }}</p>
     <p>LSP Group: {{ selectedLspGroup?.name || 'None' }}</p>
   </mat-card>
-</div>
+</tooling-page-layout>
