--- a/StewardClient/src/app/pages/navbar-app/pages/gifting/gravity/gravity-gifting.component.html
+++ b/StewardClient/src/app/pages/navbar-app/pages/gifting/gravity/gravity-gifting.component.html
@@ -1,16 +1,24 @@
-<div class="left-side">
+<tooling-page-layout
+  [disableLspGroupSelection]="disableLspGroupSelection"
+  [matTabSelectedIndex]="matTabSelectedIndex"
+  (matTabSelectionChangeEvent)="matTabSelectionChange($event)"
+>
+  <!-- Player selection -->
   <gravity-player-selection
+    player-selection
     [allowT10Id]="true"
     [allowGroup]="true"
     [(ngModel)]="selectedPlayerIdentities"
     (ngModelChange)="onPlayerIdentitiesChange($event)"
     (playerIdentitySelectedEvent)="playerIdentitySelected($event)"
   ></gravity-player-selection>
-</div>
 
-<div class="action-container">
-  <mat-card>
+  <!-- LSP Group Selection - disabled for gravity title -->
+
+  <!-- Page tool -->
+  <mat-card tool-container>
     <h2>Gravity gifting page state</h2>
     <p>Number of identities: {{ selectedPlayerIdentities?.length }}</p>
   </mat-card>
-</div>
+</tooling-page-layout>
+
