--- a/StewardClient/src/app/pages/navbar-app/components/tooling-page-layout/tooling-page-layout.component.html
+++ b/StewardClient/src/app/pages/navbar-app/components/tooling-page-layout/tooling-page-layout.component.html
@@ -1,5 +1,6 @@
 <div class="left-side">
-  <mat-tab-group mat-stretch-tabs
+  <mat-tab-group
+    mat-stretch-tabs
     [(selectedIndex)]="matTabSelectedIndex"
     (selectedTabChange)="matTabSelectionChange($event.index)"
   >
