add back in accidentally remove display function for mat autocomplete form control

--- a/StewardClient/src/app/pages/navbar-app/components/lsp-group-selection/lsp-group-selection.component.html
+++ b/StewardClient/src/app/pages/navbar-app/components/lsp-group-selection/lsp-group-selection.component.html
@@ -20,6 +20,7 @@
         <mat-autocomplete
           (optionSelected)="emitNewSelection($event.option.value)"
           #auto="matAutocomplete"
+          [displayWith]="displayFn"
         >
           <mat-option *ngFor="let option of filteredLspGroupOptions | async" [value]="option">
             {{ option.name }}
