made changes for nit comments

--- a/StewardClient/src/app/pages/navbar-app/components/player-selection/player-selection.component.html
+++ b/StewardClient/src/app/pages/navbar-app/components/player-selection/player-selection.component.html
@@ -1,6 +1,6 @@
 <mat-card>
   <h2>
-    Select {{ title }} players
+    Select {{ title }} Players
     <span *ngIf="playerIdentities?.length > 0">({{ playerIdentities.length }})</span>
   </h2>
 
