--- a/StewardClient/src/app/pages/navbar-app/components/lsp-group-selection/lsp-group-selection.component.html
+++ b/StewardClient/src/app/pages/navbar-app/components/lsp-group-selection/lsp-group-selection.component.html
@@ -44,7 +44,6 @@
 <ng-template #failState>
   <div id="fail-state">
     <mat-progress-spinner *ngIf="isLoading" mode="indeterminate"></mat-progress-spinner>
-    <p *ngIf="loadError">Failed to load.</p>
-    <pre *ngIf="loadError">{{ loadError | json }}</pre>
+    <json-dump *ngIf="loadError" [input]="loadError">Failed to load.</json-dump>
   </div>
 </ng-template>
