--- a/StewardClient/src/app/pages/navbar-app/pages/gifting/gravity/gravity-gifting.component.html
+++ b/StewardClient/src/app/pages/navbar-app/pages/gifting/gravity/gravity-gifting.component.html
@@ -1,23 +1,19 @@
-<tooling-page-layout
-  [disableLspGroupSelection]="disableLspGroupSelection"
-  [matTabSelectedIndex]="matTabSelectedIndex"
-  (matTabSelectionChangeEvent)="matTabSelectionChange($event)"
->
-  <!-- Player selection -->
-  <gravity-player-selection
-    player-selection
-    [allowT10Id]="true"
-    [allowGroup]="true"
-    [(ngModel)]="selectedPlayerIdentities"
-    (ngModelChange)="onPlayerIdentitiesChange($event)"
-    (playerIdentitySelectedEvent)="playerIdentitySelected($event)"
-  ></gravity-player-selection>
+<div class="default-page-layout">
+  <div class="default-page-layout-left">
+    <gravity-player-selection
+      [allowT10Id]="true"
+      [allowGroup]="true"
+      [(ngModel)]="selectedPlayerIdentities"
+      (ngModelChange)="onPlayerIdentitiesChange($event)"
+      (playerIdentitySelectedEvent)="playerIdentitySelected($event)"
+    ></gravity-player-selection>
+  </div>
 
-  <!-- LSP Group Selection - disabled for gravity title -->
-
-  <!-- Page tool -->
-  <mat-card tool-container>
-    <h2>Gravity gifting page state</h2>
-    <p>Number of identities: {{ selectedPlayerIdentities?.length }}</p>
-  </mat-card>
-</tooling-page-layout>
+  <div class="default-page-layout-right">
+    <!-- Page tool -->
+    <mat-card>
+      <h2>Gravity gifting page state</h2>
+      <p>Number of identities: {{ selectedPlayerIdentities?.length }}</p>
+    </mat-card>
+  </div>
+</div>
