--- a/StewardClient/src/app/pages/navbar-app/pages/gifting/sunrise/sunrise-gifting.component.html
+++ b/StewardClient/src/app/pages/navbar-app/pages/gifting/sunrise/sunrise-gifting.component.html
@@ -1,30 +1,38 @@
-<tooling-page-layout
-  [disableLspGroupSelection]="disableLspGroupSelection"
-  [matTabSelectedIndex]="matTabSelectedIndex"
-  (matTabSelectionChangeEvent)="matTabSelectionChange($event)"
->
-  <!-- Player selection -->
-  <sunrise-player-selection
-    player-selection
-    [allowGroup]="true"
-    [allowT10Id]="false"
-    [allowGroup]="true"
-    [(ngModel)]="selectedPlayerIdentities"
-    (ngModelChange)="onPlayerIdentitiesChange($event)"
-    (playerIdentitySelectedEvent)="playerIdentitySelected($event)"
-  ></sunrise-player-selection>
+<div class="default-page-layout">
+  <div class="default-page-layout-left">
+    <mat-tab-group
+      mat-stretch-tabs
+      [(selectedIndex)]="matTabSelectedIndex"
+      (selectedTabChange)="matTabSelectionChange($event.index)"
+    >
+      <mat-tab label="Player Selection">
+        <!-- Player selection -->
+        <sunrise-player-selection
+          [allowGroup]="true"
+          [allowT10Id]="false"
+          [allowGroup]="true"
+          [(ngModel)]="selectedPlayerIdentities"
+          (ngModelChange)="onPlayerIdentitiesChange($event)"
+          (playerIdentitySelectedEvent)="playerIdentitySelected($event)"
+        ></sunrise-player-selection>
+      </mat-tab>
+      <mat-tab *ngIf="!disableLspGroupSelection" label="LSP Group Selection">
+        <!-- LSP Group Selection -->
+        <sunrise-lsp-group-selection
+          [(ngModel)]="selectedLspGroup"
+          (ngModelChange)="onLspGroupChange($event)"
+        ></sunrise-lsp-group-selection>
+      </mat-tab>
+    </mat-tab-group>
+  </div>
 
-  <!-- LSP Group Selection -->
-  <sunrise-lsp-group-selection
-    lsp-group-selection
-    [(ngModel)]="selectedLspGroup"
-    (ngModelChange)="onLspGroupChange($event)"
-  ></sunrise-lsp-group-selection>
+  <div class="default-page-layout-right">
+    <!-- Page tool -->
+    <mat-card>
+      <h2>Sunrise gifting page state</h2>
+      <p>Number of identities: {{ selectedPlayerIdentities?.length }}</p>
+      <p>LSP Group: {{ selectedLspGroup?.name || 'None' }}</p>
+    </mat-card>
+  </div>
+</div>
 
-  <!-- Page tool -->
-  <mat-card tool-container>
-    <h2>Sunrise gifting page state</h2>
-    <p>Number of identities: {{ selectedPlayerIdentities?.length }}</p>
-    <p>LSP Group: {{ selectedLspGroup?.name || 'None' }}</p>
-  </mat-card>
-</tooling-page-layout>
