--- a/StewardClient/src/app/pages/navbar-app/pages/gifting/sunrise/sunrise-gifting.component.html
+++ b/StewardClient/src/app/pages/navbar-app/pages/gifting/sunrise/sunrise-gifting.component.html
@@ -28,6 +28,10 @@
 
   <div class="default-page-layout-right">
     <!-- Page tool -->
+    <sunrise-gift-basket
+      [playerIdentities]="selectedPlayerIdentities"
+    ></sunrise-gift-basket>
+    
     <mat-card>
       <h2>Sunrise gifting page state</h2>
       <p>Number of identities: {{ selectedPlayerIdentities?.length }}</p>
