working on gift basket cards

--- a/StewardClient/src/app/pages/navbar-app/pages/gifting/sunrise/sunrise-gifting.component.html
+++ b/StewardClient/src/app/pages/navbar-app/pages/gifting/sunrise/sunrise-gifting.component.html
@@ -30,12 +30,7 @@
     <!-- Page tool -->
     <sunrise-gift-basket
       [playerIdentities]="selectedPlayerIdentities"
+      [lspGroup]="selectedLspGroup"
     ></sunrise-gift-basket>
-    
-    <mat-card>
-      <h2>Sunrise gifting page state</h2>
-      <p>Number of identities: {{ selectedPlayerIdentities?.length }}</p>
-      <p>LSP Group: {{ selectedLspGroup?.name || 'None' }}</p>
-    </mat-card>
   </div>
 </div>
