--- a/StewardClient/src/app/pages/navbar-app/pages/gifting/components/gift-basket/gift-basket.component.html
+++ b/StewardClient/src/app/pages/navbar-app/pages/gifting/components/gift-basket/gift-basket.component.html
@@ -1,50 +1,44 @@
 <mat-card>
-  <h2>
-    {{ title }} Gift Basket
-  </h2>
+  <h2>{{ title }} Gift Basket</h2>
 
   <ng-container *ngIf="!isLoading && !loadError; else failState">
     <!-- Verify card is not disabled. Set in game title components that extend base -->
     <ng-container *ngIf="!disableCard; else giftingNotSupported">
       <!-- Gravity is unique, master inventory is based on player inventory game settings -->
-      <ng-container *ngIf="title !== 'Gravity' || (title === 'Gravity' && !!playerInventory); else waitingForGameSettings">
+      <ng-container
+        *ngIf="
+          title !== 'Gravity' || (title === 'Gravity' && !!playerInventory);
+          else waitingForGameSettings
+        "
+      >
         <h3><b>Overview</b></h3>
         <p>Number of identities: {{ playerIdentities?.length || '0' }}</p>
-        <p>LSP Group: {{ lspGroup?.name || 'None' }}</p><br/>
+        <p>LSP Group: {{ lspGroup?.name || 'None' }}</p>
+        <br />
 
         <h3><b>Master Inventory</b></h3>
         <p *ngIf="!!masterInventory">
-          Credit Rewards<br/>
-          <span *ngFor="let item of masterInventory.creditRewards">
-            {{ item }}<br />
-          </span>
+          Credit Rewards<br />
+          <span *ngFor="let item of masterInventory.creditRewards"> {{ item }}<br /> </span>
 
-          <b>Cars</b><br/>
-          <span *ngFor="let item of masterInventory.cars">
-            {{ item.displayName }}<br />
-          </span>
+          <b>Cars</b><br />
+          <span *ngFor="let item of masterInventory.cars"> {{ item.displayName }}<br /> </span>
 
-          <b>CarHorns</b><br/>
-          <span *ngFor="let item of masterInventory.carHorns">
-            {{ item.displayName }}<br />
-          </span>
+          <b>CarHorns</b><br />
+          <span *ngFor="let item of masterInventory.carHorns"> {{ item.displayName }}<br /> </span>
 
-          <b>Emotes</b><br/>
-          <span *ngFor="let item of masterInventory.emotes">
-            {{ item.name }}<br />
-          </span>
+          <b>Emotes</b><br />
+          <span *ngFor="let item of masterInventory.emotes"> {{ item.name }}<br /> </span>
 
-          <b>Quick Chat Lines</b><br/>
+          <b>Quick Chat Lines</b><br />
           <span *ngFor="let item of masterInventory.quickChatLines">
             {{ item.chatMessage }}<br />
           </span>
 
-          <b>Vanity Items</b><br/>
-          <span *ngFor="let item of masterInventory.vanityItems">
-            {{ item.itemId }}<br />
-          </span>
+          <b>Vanity Items</b><br />
+          <span *ngFor="let item of masterInventory.vanityItems"> {{ item.itemId }}<br /> </span>
         </p>
-        </ng-container>
+      </ng-container>
     </ng-container>
   </ng-container>
 </mat-card>
