--- a/StewardClient/src/variables.scss
+++ b/StewardClient/src/variables.scss
@@ -41,3 +41,12 @@ $gap-inner-container: 10px;
 $gap-table: 5px;
 
 $width-mediaquery-sidebar-break: 250px;
+
+@mixin screenreader-only() {
+  position: absolute;
+  left: -10000px;
+  top: auto;
+  width: 1px;
+  height: 1px;
+  overflow: hidden;
+}
