--- a/StewardClient/src/app/shared/views/player-notifications/titles/sunrise/sunrise-player-notifications.component.html
+++ b/StewardClient/src/app/shared/views/player-notifications/titles/sunrise/sunrise-player-notifications.component.html
@@ -12,7 +12,9 @@
     <ng-container *ngIf="!isLoading && !loadError; else failstate">
       <table mat-table [dataSource]="notifications">
         <ng-container matColumnDef="isRead">
-          <th mat-header-cell *matHeaderCellDef>Is Read</th>
+          <th mat-header-cell *matHeaderCellDef>
+            <fa-icon [icon]="seenIcon" matTooltip="Read Status" aria-label="Read Status"></fa-icon>
+          </th>
           <td mat-cell *matCellDef="let entry">
             <fa-icon *ngIf="entry.isRead" [icon]="seenIcon" matTooltip="Seen" aria-label="Seen" class="seen"></fa-icon>
             <fa-icon *ngIf="!entry.isRead" [icon]="unSeenIcon" matTooltip="Not Seen" aria-label="Not Seen" class="not-seen"></fa-icon>
