--- a/StewardClient/src/app/pages/navbar-app/pages/gifting/components/gift-basket/gift-basket.component.html
+++ b/StewardClient/src/app/pages/navbar-app/pages/gifting/components/gift-basket/gift-basket.component.html
@@ -18,7 +18,7 @@
 
         <h3><b>Master Inventory</b></h3>
         <p *ngIf="!!masterInventory">
-          Credit Rewards<br />
+          <b>Credit Rewards</b><br />
           <span *ngFor="let item of masterInventory.creditRewards"> {{ item }}<br /> </span>
 
           <b>Cars</b><br />
