--- a/StewardClient/src/app/pages/navbar-app/pages/gifting/gravity/gravity-gifting.component.html
+++ b/StewardClient/src/app/pages/navbar-app/pages/gifting/gravity/gravity-gifting.component.html
@@ -5,7 +5,7 @@
       [allowGroup]="true"
       [(ngModel)]="selectedPlayerIdentities"
       (ngModelChange)="onPlayerIdentitiesChange($event)"
-      (playerIdentitySelectedEvent)="selectedPlayerIdentity = $event"
+      (playerIdentitySelectedEvent)="playerIdentitySelected($event)"
     ></gravity-player-selection>
   </div>
 
