--- a/StewardClient/src/app/pages/navbar-app/components/player-selection/player-selection.component.html
+++ b/StewardClient/src/app/pages/navbar-app/components/player-selection/player-selection.component.html
@@ -81,7 +81,8 @@
     </mat-chip-list>
   </div>
   <!-- 
-    TODO: This will probably get moved to the sub-tool section below player-selection tool
+    TODO: Remove
+    This will probably get moved to the sub-tool section below player-selection tool
     Leaving the (click) on the mat-chip that selected a specific player identity
   -->
   <!-- <div *ngIf="!!selectedPlayerIdentity" class="selected-player-information">
