setting up the gift history page with routing and working identity lookups. Need to do gravity still.

--- a/StewardClient/src/app/pages/navbar-app/pages/gift-history/opus/opus-gift-history.component.html
+++ b/StewardClient/src/app/pages/navbar-app/pages/gift-history/opus/opus-gift-history.component.html
@@ -1,1 +1,20 @@
-<p>opus-gift-history works!</p>
+<div class="default-page-layout">
+    <div class="default-page-layout-left">
+      <opus-player-selection
+      player-selection
+      [allowT10Id]="false"
+      [allowGroup]="false"
+      [(ngModel)]="selectedPlayerIdentities"
+      (ngModelChange)="onPlayerIdentitiesChange($event)"
+      (playerIdentitySelectedEvent)="playerIdentitySelected($event)"
+    ></opus-player-selection>
+  </div>
+  
+    <div class="default-page-layout-right">
+      <!-- Page tool -->
+      <mat-card>
+        <h2>Opus gift history page state</h2>
+        <p>Number of identities: {{ selectedPlayerIdentities?.length }}</p>
+      </mat-card>
+    </div>
+  </div>
