--- a/StewardClient/src/app/pages/navbar-app/pages/gift-history/gift-history.component.html
+++ b/StewardClient/src/app/pages/navbar-app/pages/gift-history/gift-history.component.html
@@ -1,1 +1,13 @@
-<p>gift-history works!</p>
+<mat-toolbar color="default">
+    <a
+      *ngFor="let link of navbarRouterLinks"
+      [routerLink]="link.route"
+      mat-button
+      routerLinkActive="mat-stroked-button"
+      >{{ link.name }}</a
+    >
+    <span class="spacer"></span>
+  </mat-toolbar>
+  
+  <router-outlet></router-outlet>
+  
