--- a/StewardClient/src/app/pages/navbar-app/pages/gift-history/sunrise/sunrise-gift-history.component.html
+++ b/StewardClient/src/app/pages/navbar-app/pages/gift-history/sunrise/sunrise-gift-history.component.html
@@ -1,1 +1,36 @@
-<p>sunrise-gift-history works!</p>
+<div class="default-page-layout">
+    <div class="default-page-layout-left">
+      <mat-tab-group
+        mat-stretch-tabs
+        [(selectedIndex)]="matTabSelectedIndex"
+        (selectedTabChange)="matTabSelectionChange($event.index)"
+      >
+        <mat-tab label="Player Selection">
+          <!-- Player selection -->
+          <sunrise-player-selection
+            [allowT10Id]="false"
+            [allowGroup]="true"
+            [(ngModel)]="selectedPlayerIdentities"
+            (ngModelChange)="onPlayerIdentitiesChange($event)"
+            (playerIdentitySelectedEvent)="playerIdentitySelected($event)"
+          ></sunrise-player-selection>
+        </mat-tab>
+        <mat-tab *ngIf="!disableLspGroupSelection" label="LSP Group Selection">
+          <!-- LSP Group Selection -->
+          <sunrise-lsp-group-selection
+            [(ngModel)]="selectedLspGroup"
+            (ngModelChange)="onLspGroupChange($event)"
+          ></sunrise-lsp-group-selection>
+        </mat-tab>
+      </mat-tab-group>
+    </div>
+  
+    <div class="default-page-layout-right">
+      <!-- Page tool -->
+      <mat-card>
+        <h2>Sunrise gift history page state</h2>
+        <p>Number of identities: {{ selectedPlayerIdentities?.length }}</p>
+        <p>LSP Group: {{ selectedLspGroup?.name || 'None' }}</p>
+      </mat-card>
+    </div>
+  </div>
