apollo view now also works.

--- a/StewardClient/src/app/pages/navbar-app/pages/gift-history/apollo/apollo-gift-history.component.html
+++ b/StewardClient/src/app/pages/navbar-app/pages/gift-history/apollo/apollo-gift-history.component.html
@@ -30,7 +30,8 @@
     <mat-card>
       <h2>Apollo gift history page state</h2>
       <p>Number of identities: {{ selectedPlayerIdentities?.length }}</p>
-      <p>LSP Group: {{ selectedLspGroup?.name || 'None' }}</p>
+      <p>LSP Group: {{ selectedLspGroup?.name || 'None' }}</p>      
+      <apollo-gift-history-results></apollo-gift-history-results>
     </mat-card>
   </div>
 </div>
