--- a/StewardClient/src/app/pages/navbar-app/pages/user-banning/pages/sunrise/sunrise-banning.component.html
+++ b/StewardClient/src/app/pages/navbar-app/pages/user-banning/pages/sunrise/sunrise-banning.component.html
@@ -1,9 +1,30 @@
 <ng-container [formGroup]="formGroup" (ngSubmit)="submit()">
-  <sunrise-player-selection
-    [allowT10Id]="false"
-    [allowGroup]="true"
-    [formControl]="formControls.playerIdentities"
-  ></sunrise-player-selection>
+  <div class="left">
+    <sunrise-player-selection
+      #playerSelection
+      [allowT10Id]="false"
+      [allowGroup]="true"
+      [formControl]="formControls.playerIdentities">
+      <player-selection-chip
+        *ngFor="let identity of playerSelection.playerIdentitiesFull"
+        [playerSelection]="playerSelection"
+        [identity]="identity">
+        <ban-chip-icon
+          [identity]="identity"
+          [banSummary]="summaryLookup[identity.xuid]"
+          [banQuery]="getBanHistoryComponentByXuid(identity.xuid)"></ban-chip-icon>
+      </player-selection-chip>
+    </sunrise-player-selection>
+    <div class="bottom">
+      <mat-card>
+        <mat-card-content>
+          <ng-container *ngFor="let identity of playerSelection.playerIdentitiesFull">
+            <sunrise-ban-history [xuid]="identity.xuid"></sunrise-ban-history>
+          </ng-container>
+        </mat-card-content>
+      </mat-card>
+    </div>
+  </div>
 
   <div class="action-container">
     <mat-card>
