--- a/StewardClient/src/app/pages/navbar-app/components/player-selection/player-selection-chip/player-selection-chip.component.html
+++ b/StewardClient/src/app/pages/navbar-app/components/player-selection/player-selection-chip/player-selection-chip.component.html
@@ -1,13 +1,15 @@
 <mat-chip
-  [class.invalid-identity]="!!identity.error">
+  [class.identity-valid]="!identity.error"
+  [class.identity-invalid]="!!identity.error">
   <span class="name"
-    [matTooltip]="identity[playerSelection.playerIdType]">
-    {{ identity[playerSelection.playerIdType] || 'mystery' }}
+    [matTooltip]="nameTooltip">
+    {{ name || 'N/A' }}
   </span>
   <ng-content></ng-content>
   <fa-icon
-    class="remove-player-icon"
+    class="clickable"
     [icon]="closeIcon"
+    clickStop
     matTooltip="Remove player from list"
     (click)="playerSelection.removeIdentityFromList(identity)"
     title="Remove Player"
