--- a/StewardClient/src/app/pages/navbar-app/components/player-selection/player-selection-chip/player-selection-chip.component.scss
+++ b/StewardClient/src/app/pages/navbar-app/components/player-selection/player-selection-chip/player-selection-chip.component.scss
@@ -1,3 +1,5 @@
+@import '/src/variables.scss';
+
 /** chip layout */
 mat-chip {
   display: flex;
@@ -11,6 +13,20 @@ mat-chip {
   }
 }
 
+// the chip is clickable
 mat-chip {
   cursor: pointer;
+}
+
+// vertically center the icons
+fa-icon {
+  line-height: 1em;
+}
+
+.identity-valid {
+  background-color: mat-color($app-primary, 'lighter');
+}
+
+.identity-invalid {
+  background-color: mat-color($app-warn, 'lighter');
 }
