--- a/StewardClient/src/app/pages/navbar-app/pages/user-banning/components/duration-picker/duration-picker.component.html
+++ b/StewardClient/src/app/pages/navbar-app/pages/user-banning/components/duration-picker/duration-picker.component.html
@@ -1,6 +1,6 @@
 <mat-form-field class="date-picker" appearance="fill">
   <mat-label>Ban End Date</mat-label>
-  <input matInput [matDatepicker]="datePicker" disabled />
+  <input matInput [matDatepicker]="datePicker" [value]="targetDate" disabled />
   <mat-datepicker-toggle matSuffix [for]="datePicker"></mat-datepicker-toggle>
   <mat-datepicker #datePicker></mat-datepicker>
 </mat-form-field>
