moved master inventory selection to form group control

--- a/StewardClient/src/app/pages/navbar-app/pages/gifting/components/gift-basket/apollo/apollo-gift-basket.component.html
+++ b/StewardClient/src/app/pages/navbar-app/pages/gifting/components/gift-basket/apollo/apollo-gift-basket.component.html
@@ -11,7 +11,7 @@
           else waitingForGameSettings
         "
       >
-        <apollo-item-selection [masterInventory]="masterInventory"></apollo-item-selection>
+        <apollo-item-selection [masterInventory]="masterInventory" (addItemEvent)="addItemtoBasket($event)"></apollo-item-selection>
       </ng-container>
     </ng-container>
   </ng-container>
