--- a/StewardClient/src/app/pages/navbar-app/pages/gifting/components/gift-basket/sunrise/sunrise-gift-basket.component.html
+++ b/StewardClient/src/app/pages/navbar-app/pages/gifting/components/gift-basket/sunrise/sunrise-gift-basket.component.html
@@ -11,7 +11,7 @@
           else waitingForGameSettings
         "
       >
-        <sunrise-item-selection [masterInventory]="masterInventory"></sunrise-item-selection>
+        <sunrise-item-selection [masterInventory]="masterInventory" (addItemEvent)="addItemtoBasket($event)"></sunrise-item-selection>
       </ng-container>
     </ng-container>
   </ng-container>
