--- a/StewardClient/src/app/pages/navbar-app/pages/gifting/components/gift-basket/gravity/gravity-gift-basket.component.html
+++ b/StewardClient/src/app/pages/navbar-app/pages/gifting/components/gift-basket/gravity/gravity-gift-basket.component.html
@@ -11,7 +11,7 @@
           else waitingForGameSettings
         "
       >
-        <gravity-item-selection [masterInventory]="masterInventory"></gravity-item-selection>
+        <gravity-item-selection [masterInventory]="masterInventory" (addItemEvent)="addItemtoBasket($event)"></gravity-item-selection>
       </ng-container>
     </ng-container>
   </ng-container>
