--- a/StewardClient/src/app/pages/navbar-app/pages/gifting/components/item-selection/item-selection.component.html
+++ b/StewardClient/src/app/pages/navbar-app/pages/gifting/components/item-selection/item-selection.component.html
@@ -1,4 +1,4 @@
-<form [formGroup]="stateForm">
+<form [formGroup]="itemSelectionForm">
   <mat-form-field class="item-selection-form-field">
     <input
       type="text"
@@ -25,5 +25,5 @@
     <mat-label>Quantity</mat-label>
     <input id="item-selection-quanity-input" type="number" matInput placeholder="1" formControlName="quantity" />
   </mat-form-field>
-  <button mat-raised-button color="primary" (click)="addItemEmit()" [disabled]="!stateForm.valid">Add Item</button>
+  <button mat-raised-button color="primary" (click)="addItemEmit()" [disabled]="!itemSelectionForm.valid">Add Item</button>
 </form>
